webpage is set up

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,12 +27,12 @@ body {
 }
 
 /* public/fonts/pixel-font.ttf */
-@font-face {
+/* @font-face {
   font-family: 'PixelFont';
   src: url('/fonts/pixel-font.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
+} */
 
 /* body {
   font-family: 'PixelFont', sans-serif;
