--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
+    
 }
 
 /* public/fonts/pixel-font.ttf */
@@ -40,4 +42,20 @@ body {
 
 #pixel_font {
   font-family: 'cheeseFont', sans-serif;
+}
+
+
+/* Hide scrollbar for Chrome, Safari, and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge */
+body {
+  -ms-overflow-style: none;
+}
+
+/* Hide scrollbar for Firefox */
+body {
+  scrollbar-width: none;
 }
